Final red pen edits to end.

--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -217,7 +217,7 @@ Virtual Reality (VR) & The polar opposite of reality, an environment that consis
 		
 %=========================================================================================================
 
-Augmented Reality (AR) & A mixed reality environment that features a real environment as its primary environment and onto which virtual objects are added or overlain. A common approach for achieving this addition/overlay is superimposing virtual objects over a direct or indirect view of the real environment using HMD \&/or cameras~\cite{Krevelen2010}, more recently making use of smartphones with their built in cameras and orientation sensing capabilities. \\
+Augmented Reality (AR) & A mixed reality environment that features a real environment as its primary environment and onto which virtual objects are added or overlain. A common approach for achieving this addition/overlay is superimposing virtual objects over a direct or indirect view of the real environment using HMD and/or cameras~\cite{Krevelen2010}, more recently making use of smartphones with their built in cameras and orientation sensing capabilities. \\
 
 	%A commercial example of \textit{augmented reality} is the Layar browser for mobile phones, which overlays various forms of data onto the view captured by a phone's camera after determining its location and orientation using GPS, accelerometer and magnetometer readings~\cite{eishita:layar}
 
@@ -656,7 +656,7 @@ Transitions between the virtual world and the real world can be implemented in m
 With Lifton's vacancy being visualised upon the combined model as the largely singular nature of a user's position upon the locus of attention axis (section \ref{combined-milgram-waterworth-model}) and the parallel reality concept hoping to allow users to more freely oscillate between two positions upon the locus of attention axis, success in mitigating deflections upon the focus of attention axis when performing transitions, allowing multiple positions upon the locus of attention axis to be occupied, can be related to success in mitigating vacancy. This observation leads to an extended definition of the vacancy problem:
 
 \begin{quote}
-	\textbf{The Extended Vacancy Problem} - Performing a transition between two environments upon the locus of attention axis of the combined Milgram/Waterworth model is accompanied by a break in presence manifesting as a deflection upon the focus of attention axis from presence towards absence.
+	\textbf{The Extended Vacancy Problem} - Performing a transition between two environments upon the locus of attention axis of the combined Milgram/Waterworth model is accompanied by a break in presence that manifests as a deflection upon the focus of attention axis from presence towards absence.
 \end{quote}
 
 By investigating several different transition implementations, identifying and quantifying preferences toward them in different situational states, this thesis explores the relationships between transitions and the successful mitigation of the extended vacancy problem.
