--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -735,7 +735,7 @@ Table \ref{influence-factors-vtw-table} lists the principle factors observed thr
 
 %=========================================================================================================
 		
-Framerate & Should be higher, through use of more powerful hardware \&/or more suitable software environment. \\
+Framerate & Should be higher, through use of more powerful hardware and/or more suitable software environment. \\
 
 \midrule
 
