--- a/07_conclusions/conclusions.tex
+++ b/07_conclusions/conclusions.tex
@@ -1,7 +1,3 @@
-%******* ME ME ME!!!
-
-%As will be discussed further in the following chapter, the ultimate realisation of a parallel reality system may in fact be one in which a mix of RW and VR visuals are presented in a manner more similar to familiar AR systems, but maintaining the ability to view either complete environment individually at the total exclusion of the other.
-
 %=========================================================================================================
 
 \begin{quote}
@@ -15,7 +11,7 @@
 
 \label{chapter-conclusions}
 
-Alternate realities have fascinated mankind since early prehistory and with the advent of the computer and the smartphone we have seen the rise of many different categories of alternate reality that seek to replace, augment, diminish and mix with our familiar real world to expand our capabilities and our understanding. This thesis has introduced parallel reality as a new category of alternate reality comprising two environments that the user may freely switch between, one real and the other virtual, both complete unto themselves. The benefits that such a system imparts upon the user by granting them the ability to mitigate the extended vacancy problem and explore parallel real and virtual environments in tandem have been shown through the development of the Mirrorshades parallel reality platform and its application to user studies within the realm of cultural heritage. Evaluation of these studies has lead to the establishment of a number of best practices to guide future parallel reality endeavours.
+Alternate realities have fascinated mankind since early prehistory and with the advent of the computer and the smartphone we have seen the rise of many different categories of alternate reality that seek to replace, augment, diminish and mix with our familiar real world to expand our capabilities and our understanding. This thesis has introduced parallel reality as a new category of alternate reality comprising two environments that the user may freely switch between, one real and the other virtual, both complete unto themselves. The benefits that such a system impart upon the user by granting them the ability to mitigate the effects of an extended definition of the vacancy problem, first observed by Joshua Lifton during his investigation into the cross reality paradigm, and to explore parallel real and virtual environments in tandem have been shown through the development of the Mirrorshades parallel reality platform and its application to user studies within the realm of cultural heritage. Evaluation of these studies has lead to the establishment of a number of best practices to guide future parallel reality endeavours.
 
 \begin{figure}[t]
 	\begin{center}
@@ -45,7 +41,7 @@ As listed in section \ref{intro-contributions} the contributions of this thesis 
 	\item The introduction of the combined Milgram/Waterworth model and the extended vacancy problem definition, for visualising alternate reality experiences, including those of parallel reality systems.
 	\item Exploration into the suitability of an existing state of the art alternate reality modality of interaction (Situated Simulations) for investigation into parallel reality experience, producing the Virtual Time Window platform through extension of the Second Life client.
 	\item Development of a bespoke platform for parallel reality, dubbed Mirrorshades, that uses the Unity game engine to combine the modern virtual reality hardware of the Oculus Rift with the novel indoor positioning technology of IndoorAtlas.
-	\item Evaluation of the Mirrorshades platform through user studies of a real world use case study within the realm of virtual heritage, including the discussion and application of an established presence questionnaire to a parallel reality experience, both to assess the worth of the concept and to inform future implementations.
+	\item Evaluation of the Mirrorshades platform through user studies of a real world use case studies within the realm of virtual heritage, including the discussion and application of an established presence questionnaire to a parallel reality experience, both to assess the worth of the concept and to inform future implementations.
 	\item Creation and discussion of a set of best practices to guide future parallel reality endeavours.
 \end{itemize}
 
@@ -56,7 +52,7 @@ As listed in section \ref{intro-contributions} the contributions of this thesis 
 In reference to the objectives as originally listed in section \ref{objectivesandmethodology} this thesis has been successful in meeting what it set out to do, as discussed below.
 
 \begin{enumerate}
-	\item[1] Introduce the parallel reality concept by situating it within the larger ecosystem of existing categories of alternate reality, through a thorough exploration of existing alternate reality definitions, taxonomies and frameworks, performing updates, modifications and extensions where required.
+	\item[1] Introduce the parallel reality concept by situating it within the larger ecosystem of existing categories of alternate reality, through a thorough exploration of existing alternate reality definitions, taxonomies and frameworks.
 \end{enumerate}
 
 The introduction of parallel reality as a new category of alternate reality in a clear and unambiguous fashion was no simple task, as decades of research into alternate realities has furnished us with a rich continuum of approaches and technologies for creating, combining, augmenting and diminishing real and virtual environments. The fact that there are often no clear boundaries between where one category ends and another begins, with the inherently subjective nature of space experience leading to continuums being a more popular method for identification than discrete categorisation, has lead to many common labels being applied to multiple subtly different scenarios. Whilst some of these uses are explained easily enough by differing subjective positions, some would seem at first glance to be almost contradictory.
@@ -67,12 +63,12 @@ The purpose of the extensive background and literature review in chapter \ref{ch
 	\item[2] Develop a suitable model for the illustration of experience in parallel reality scenarios, allowing not only for comparison and contrast between parallel reality and other alternate reality experiences, but also for illustration of different implementations of parallel reality experience.
 \end{enumerate}
 
-As one of the direct products of the work discussed for objective 1, the combined Milgram/Waterworth model (section \ref{combined-milgram-waterworth-model}) was produced for this purpose and represents a novel tool for visualising, discussing and comparing alternate reality experiences. By combining the relatively objective assessment of where the percepts a user is perceiving originate from (Milgram and Kishino) with the more subjective and experiential assessment of the direction and magnitude of that user's mental resources (Waterworth and Waterworth) we are gifted the ability to assess both vantages upon a single plot, which promises to make relationships them more visible and more easily discussed.
+As one of the direct products of the work discussed for objective 1, the combined Milgram/Waterworth model (section \ref{combined-milgram-waterworth-model}) was produced for this purpose and represents a novel tool for visualising, discussing and comparing alternate reality experiences. By combining the relatively objective assessment of where the percepts a user is perceiving originate from (Milgram and Kishino) with the more subjective and experiential assessment of the direction and magnitude of that user's mental resources (Waterworth and Waterworth) we are gifted the ability to assess both vantages upon a single plot, which promises to make relationships between them more visible and more easily discussed.
 
-One such relationship that became apparent in this manner was that of how the vacancy problem, as identified by Lifton in his cross reality research, can be mapped and explained in reference to both the Milgram and Kishino continuum and the Waterworth and Waterworth model, while also connecting with the Waterworth and Waterworth notion of the break in presence concept. This observation led to the introduction of the definition of the extended vacancy problem, as found in section \ref{visualising-transitions-extended-vacancy} and reproduced below:
+One such relationship that became apparent in this manner was that of how the vacancy problem, as identified by Lifton in his cross reality research, can be mapped and explained in reference to both the Milgram and Kishino continuum and the Waterworth and Waterworth model, while also connecting with the Waterworth and Waterworth notion of the break in presence concept. This observation led to the introduction and definition of the extended vacancy problem, as found in section \ref{visualising-transitions-extended-vacancy} and reproduced below:
 
 \begin{quote}
-	\textbf{The Extended Vacancy Problem} - Performing a transition between two environments upon the locus of attention axis of the combined Milgram/Waterworth model is accompanied by a break in presence manifesting as a deflection upon the focus of attention axis from presence towards absence.
+	\textbf{The Extended Vacancy Problem} - Performing a transition between two environments upon the locus of attention axis of the combined Milgram/Waterworth model is accompanied by a break in presence that manifests as a deflection upon the focus of attention axis from presence towards absence.
 \end{quote}
 
 The combined Milgram/Waterworth model is a particularly useful visualisation method for discussing the parallel reality concept, as the manner in which it allows the comparatively objective assessment of the provenance of the stimuli that the user is perceiving to be visualised along with the comparatively subjective assessment of their experience in terms of conceptual versus perceptual processing and their level of conscious arousal is of particular value for systems in which there is more than one environment that the user is encouraged to attend to, unlike the majority of previous alternate reality experiences wherein the user is encouraged to attend to a single environment (whether that be real, virtual, or a mix) at the intentional exclusion of all others.
@@ -83,15 +79,15 @@ The combined Milgram/Waterworth model is a particularly useful visualisation met
 
 Initially it was thought that a rewarding parallel reality experience might be possible through leveraging an existing modality of alternate reality interaction, that of Situated Simulation (SitSim), and the VTW project discussed in chapter \ref{chapter-vtw} investigated this possibility. Evaluation of the VTW platform uncovered two major shortcomings.
 
-The first was related to performance and was tied to the specification of the hardware and software platforms themselves, rather than being a result of any limitation imposed by the parallel reality concept itself. The decision to make use of the Second Life/OpenSim software environment, in order to make use of existing virtual content without having to embark upon a lengthy conversion process, limited the choice of tablet computer upon which the platform could operate to the very small number (at the time) of x86 tablet computers. None of these had the graphical performance of today's popular Android and iOS tablets which, when combined with the fact that Second Life/OpenSim is not in any way optimised nor designed for mobile use and is slower even than other non mobile 3D engines due to the ephemeral nature of its content, meant that graphical performance and quality were low.
+The first was related to performance and was tied to the specification of the hardware and software platforms themselves, rather than being a result of any limitation imposed by the parallel reality concept itself. The decision to adopt the Second Life/OpenSim software environment, in order to make use of existing virtual content without having to embark upon a lengthy conversion process, limited the choice of tablet computer upon which the platform could operate to the very small number (at the time) of x86 tablet computers. None of these had the graphical performance of today's popular Android and iOS tablets which, when combined with the fact that Second Life/OpenSim is not in any way optimised nor designed for mobile use and is slower even than other non mobile 3D engines due to the ephemeral nature of its content, meant that graphical performance and quality were low.
 
-The low performance and poor accessibility of the tablet's GPS and orientation sensing hardware also meant that a lengthy process of hardware prototyping and integration was required, and due to the limited control interfaces provided by the Second Life client it was necessary to embark upon a lengthy software development stage, resorting to adding low level serial I/O to the client. The observed performance of the position tracking obtained via the GPS receiver was then only sufficient to partially meet the requirements of the second of the three envisaged styles of interaction with parallel reality systems as discussed in section \ref{parallel-reality-in-virtual-heritage}.
+The low performance and poor accessibility of the tablet's GPS and orientation sensing hardware also meant that a lengthy process of hardware prototyping and integration was required, and due to the limited control interfaces provided by the Second Life client it was necessary to embark upon a substantial software development stage, which resorted to adding low level serial I/O to the client. The observed performance of the position tracking obtained via the GPS receiver was then only sufficient to partially meet the requirements of the first and part of the second of the three envisaged styles of interaction with parallel reality systems as discussed in section \ref{parallel-reality-in-virtual-heritage}.
 
 The second shortcoming of VTW was that the modality of interaction offered by the platform did not encapsulate that which was originally envisaged of the parallel reality concept of wholly switching between discrete real and virtual environments, due to the way in which the virtual was always seen as a small window surrounded by the larger and more encompassing real. When SitSim was being considered as a possible avenue through which parallel reality could manifest, the focus had been placed upon the environmental aspect, as the SitSim concept presented two complete and discrete environments, one real and the other virtual. It was not until testing the VTW platform at St Andrews Cathedral that the importance of the experiential aspect of the parallel reality concept also become clear. This led to the explicit realisation and appreciation of these two aspects of the parallel reality concept in section \ref{real-world-experience-of-vtw}, both of which needed to be realised in order for parallel reality to manifest in its originally envisaged manner.
 
 The recognition of these shortcomings highlighted the importance of the experiential aspect of parallel reality, as well as providing insight into performance requirements and best practices over what software/hardware environment to make use of, and this information was used to influence the design and development of the subsequent Mirrorshades parallel reality platform.
 
-While the physical manifestation of the Mirrorshades platform is less convenient and falls more into the category of `research equipment' than VTW, due to the fact that it fills a satchel that must be worn by the user and also occupies both of their hands with equipment, it fully realised the envisaged experience of parallel reality and did so with higher graphical performance and quality, along with higher orientation and position tracking quality thanks to the adoption of a more suitable software environment coupled with the (then) new Rift DK1 stereoscopic 3D HMD from Oculus. Using this platform it was then possible to perform user studies to assess the feasibility and worth of the concept and begin to ascertain properties and qualities of parallel reality experiences that effects their utility and enjoyment to guide future endeavours.
+While the physical manifestation of the Mirrorshades platform is less convenient and falls more into the category of `research equipment' than VTW, due to the fact that it fills a satchel that must be worn by the user and also occupies both of their hands with equipment, it fully realised the envisaged experience of parallel reality and did so with higher graphical performance and quality, along with higher orientation and position tracking quality thanks to the adoption of a more suitable software environment coupled with the (then) new Rift DK1 stereoscopic 3D HMD from Oculus. Using this platform it was then possible to perform user studies to assess the feasibility and worth of the concept and begin to ascertain properties and qualities of parallel reality experiences that effect their utility and enjoyment to guide future endeavours.
 
 \begin{enumerate}	
 	\item[4] Identify and put into practice suitable assessment techniques to ascertain the merit of parallel reality in relation to previous categories of alternate reality.
@@ -100,7 +96,7 @@ While the physical manifestation of the Mirrorshades platform is less convenient
 
 The inherently subjective nature of real and virtual space experience made such assessment techniques a challenge to decide upon. However with the utility of the combined Milgram/Waterworth model and the extended vacancy problem definition, a combination of both qualitative and quantitative techniques were identified that in combination would provide sufficient data to allow interesting observations and discoveries to be made (sections \ref{stage-1-evaluation-techniques} and \ref{stage-2-1-evaluation-techniques}).
 
-The notion of presence in relation to parallel reality experiences presented an interesting challenge for assessment (section \ref{presence-questionnaires}), as the novel nature of a parallel reality experience in promoting interaction with two discrete environments rendered most popular presence questionnaires unsuitable. These questionnaires were written for assessment of traditionally realised virtual reality experiences, in which the user is immersed in a virtual environment at the intentional exclusion of all stimuli from the real world. However by realising that the design of the igroup presence questionnaire and its 3 categories allowed the different aspect of a parallel reality experience when compared to a traditional VR experience to be isolated and assessed accordingly (section \ref{igroup-presence-questionnaire-explanation}), it could be applied to the new category of alternate reality and served to reinforce in a more quantitative fashion what was being observed in some of the qualitative feedback.
+The notion of presence in relation to parallel reality experiences presented an interesting challenge for assessment (section \ref{presence-questionnaires}), as the novel nature of a parallel reality experience in promoting interaction with two discrete environments rendered most popular presence questionnaires unsuitable. These questionnaires were written for assessment of traditionally realised virtual reality experiences, in which the user is immersed in a virtual environment at the intentional exclusion of all stimuli from the real world. However by realising that the design of the igroup presence questionnaire and its 3 categories allowed the novel aspect of a parallel reality experience when compared to a traditional VR experience to be isolated and assessed accordingly (section \ref{igroup-presence-questionnaire-explanation}), it could be applied to the new category of alternate reality and served to reinforce in a more scientific fashion what was being observed in some of the qualitative feedback.
 
 \begin{enumerate}
 	\item[6] Evaluate user studies to inform creation of best practise recommendations for future parallel reality endeavours.
@@ -108,7 +104,7 @@ The notion of presence in relation to parallel reality experiences presented an 
 
 As listed in section \ref{best-practices-for-parallel-reality} a number of best practices to guide future parallel reality endeavours were created. These best practices are presented as observations from an initial investigation into a new category of alternate reality. The small number of participants, their limited age range and the use of a single case study within the context of cultural heritage prevents any detailed, low level claims being made into the best manners in which to implement particular features of a parallel reality system. But as initial evidence that justifies more detailed future work, they hope to help direct the design and implementation of future parallel reality endeavours without presumptuously attempting to prescribe specifics of individual features for which sufficient data and observations are not yet available.
 
-These best practices cover technology based aspects, such as the importance of intelligently choosing hardware and software environments to provide the best graphical quality as possible, aspects mitigating limitations of technology that are not as easily overcome such as intelligently handling inaccuracies in position tracking, and more subjective/experiential aspects relating to how implementation of transitions between real and virtual environments affect user experience, utility of the system and overall enjoyment.
+These best practices cover technology based aspects, such as the importance of choosing appropriate hardware and software environments to provide the best graphical quality as possible, aspects mitigating limitations of technology that are not as easily overcome, such as intelligently handling inaccuracies in position tracking, as well as more subjective/experiential aspects relating to how implementation of transitions between real and virtual environments affect user experience, utility of the system and overall enjoyment.
 
 %=========================================================================================================
 
@@ -134,18 +130,18 @@ And later when formally introducing parallel reality in section \ref{parallelrea
 
 With the emergent preference of users in the Mirrorshades parallel reality platform evaluations towards a mixed view, the novelty of parallel reality as a distinct category of alternate reality is definitely put into question, as the user experience of the Mirrorshades platform as used in this fashion is undeniably very similar to previous AR platforms.
 
-However, in reference to section \ref{real-world-experience-of-vtw}, even though the experiential aspect of the parallel reality platform in this mixed view scenario is difficult to distinguish from an AR platform, the distinct environmental aspect of the parallel reality platform means that it should still be considered as a distinct concept due to the utility it provides to alter the experiential aspect away from a mixed view where this becomes desirable.
+However, in reference to section \ref{real-world-experience-of-vtw}, even though the experiential aspect of the parallel reality platform in this mixed view scenario is difficult to distinguish from an AR platform, the distinct environmental aspect of the parallel reality platform means that it should still be considered a distinct concept due to the utility it provides to additionally alter the experiential aspect away from a mixed view where this becomes desirable.
 
-The provision of a complete virtual environment means that the user of a parallel reality system who is viewing a mixed real/virtual view can at any time transition to seeing only real or only virtual, something that is not encapsulated by the popular definition and understanding of AR (see section \ref{summaryofalternaterealitydefinitions}) as being a single mixed environment created by the addition of some virtual objects to the real environment, where the virtual objects alone do not constitute an entire environment and rely upon their juxtaposition upon the real environment.
+The provision of a complete virtual environment means that the user of a parallel reality system who is viewing a mixed real/virtual view can at any time transition to seeing only real or only virtual, something that is not encapsulated by the popular definition and understanding of AR (see section \ref{summaryofalternaterealitydefinitions}) as being a single mixed environment created by the addition of some virtual objects to the real environment, wherein the virtual objects alone do not constitute an entire environment and rely upon their juxtaposition upon the real environment.
 
-As mentioned in section \ref{stage-2-2-summary}, this observed preference toward a mixed view indicates that the ultimate realisation of the parallel reality concept may be one that provides the ability to view such a mix, possibly even as the default view, but which \textit{additionally} allows the user to transition into viewing purely real and purely virtual environments on their own at the complete exclusion of the other, in order to perform more detailed observation of particular aspects and to aid in locomotion. One might want to consider this realisation of parallel reality as being an extreme case of AR, in which the quantity and coverage of the virtual objects surpasses that expected from the traditional understanding of AR and trends toward a point at which they do in fact constitute a complete virtual environment and thus become part of a parallel reality system.
+As mentioned in section \ref{stage-2-2-summary}, this observed preference toward a mixed view indicates that the ultimate realisation of the parallel reality concept may be one that provides the ability to view such a mix, possibly even as the default view, but which \textit{additionally} allows the user to transition into viewing purely real and purely virtual environments on their own at the complete exclusion of the other, in order to perform more detailed observation of particular aspects and to aid in ambulation. One might want to consider this realisation of parallel reality as being an extreme case of AR, in which the quantity and coverage of the virtual objects surpasses that expected from the traditional understanding of AR and trends toward a point at which they do in fact constitute a complete virtual environment and thus become part of a parallel reality system.
 
-The predisposition toward continuums, rather than categories with discrete boundaries, when discussing the position of different categories of alternate reality in relationship with each other, lends well to this possibility, producing the idea of a categorisation system where an AR system with an increasing coverage of virtual objects trends along a continuum toward being a parallel reality system, as shown by figure \ref{augmented-reality-parallel-reality-continuum.png}.
+The predisposition toward continuums, rather than categories with discrete boundaries, when discussing the position of different categories of alternate reality in relationship to each other, lends well to this possibility, producing the idea of a categorisation system where an AR system with an increasing coverage of virtual objects trends along a continuum toward a point at which it can be considered to be a parallel reality system, as shown by figure \ref{augmented-reality-parallel-reality-continuum.png}.
 
 \begin{figure}[h]
 	\begin{center}
 		\includegraphics[width=\textwidth]{augmented-reality-parallel-reality-continuum.png}
-		\caption{Continuum of increasing coverage of virtual objects in AR trending toward parallel reality.}
+		\caption{Continuum of increasing coverage of virtual objects in AR trending toward parallel reality classification.}
 		\label{augmented-reality-parallel-reality-continuum.png}
 	\end{center}	
 \end{figure}
@@ -166,9 +162,7 @@ In addition to other domains the application of parallel reality systems to more
 
 Furthermore when considering evaluation, the experience of using a parallel reality system has been assessed in this thesis only in relation to a seated VR experience within a cultural heritage scenario and with a focus upon the presence perspective. This represents only a small foray into the sources of study and evaluation that could (and perhaps should) be applied to parallel reality systems, especially when one considers applications in different domains, on larger scales and with the introduction of other users, both real and virtual, local and remote.
 
-Finally, the evaluation of parallel reality in this thesis has been based upon experiences with a parallel reality system that features high spatial equivalence (see section \ref{spatial-equivalence}) between its real and virtual environments. The application of parallel reality to scenarios that feature little or no spatial equivalence between their environments will surely open up a wealth of exciting investigations requiring markedly different approaches to both implementation and evaluation.
-
-This situation may become particularly pertinent as the promise of VR for social activities grows, possibly bringing us to a near future situation similar to that exemplified by the quote from Neal Stephenson's Snow Crash at the beginning of chapter \ref{chapter-background}; a future world where a multi user 3D virtual environment accessed via HMD, but which has no partner in the real world, commands so much of our attention that people find themselves wanting to be able to switch between one and the other to maintain a presence in each.
+Finally, the evaluation of parallel reality in this thesis has been based upon experiences with a parallel reality system that features high spatial equivalence (see section \ref{spatial-equivalence}) between its real and virtual environments. The application of parallel reality to scenarios that feature little or no spatial equivalence between their environments will surely open up a wealth of exciting investigations requiring markedly different approaches to both implementation and evaluation. This situation may become particularly pertinent as the promise of VR for social activities grows, possibly bringing us to a near future situation similar to that exemplified by the quote from Neal Stephenson's \textit{Snow Crash} at the beginning of chapter \ref{chapter-background}; a future world where a multi user 3D virtual environment accessed via HMD, but which has no partner in the real world, commands so much of our attention that people find themselves wanting to constantly be able to switch between one and the other to maintain a presence in each.
 
 In summary, future research into the parallel reality concept would do well to:
 \begin{itemize}
