Final red pen edits to end.

--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -419,6 +419,8 @@ The discussion in the previous section highlighted that the first distinguishing
 
 While the parallel reality concept introduced by this thesis also features two discrete environments, one real and the other virtual, that users can freely transition between visually observing, the bidirectional information flow between these environments operates in a different manner. In a cross reality system information flows both ways between the constituent environments and is processed and combined by computational means. In a parallel reality system where emphasis is placed on visual engagement with both environments information still flows in both directions between the environments, but it is processed and combined by the human mind, rather than through computational means. The exception to this observation is the use of sensed real world position information in a parallel reality system to maintain the user's vantage point into the virtual environment.
 
+\pagebreak
+
 As such, the term \textbf{parallel reality} is proposed to describe this distinct concept, removing the explicit requirement for computationally processed bidirectional information flows in exchange for the implicit human combination of real and virtual information observed by visually switching between two environments. Parallel reality is thus defined as:
 
 \begin{quote}
