Final red pen edits to end.

--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -522,9 +522,7 @@ These modifications to the Second Life client are configured/controlled via a wi
 
 %=========================================================================================================
 
-\clearpage
-
-%=========================================================================================================
+\pagebreak
 
 \section{Evaluating VTW}
 
