--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -74,23 +74,25 @@ The low-drift 1kHz head tracking built into the HMD greatly improved the accurac
 
 %=========================================================================================================
 
+\pagebreak
+
 \section{The Mirrorshades Platform}
 \label{the-mirrorshades-platform}
-Figure \ref{systemarchitecture} presents a high level architectural overview of the Mirrorshades parallel reality platform while figure \ref{participant-f-5.jpg} shows its implementation. Mirrorshades allows its user to observe and move around their real environment (RW) whilst wearing a stereoscopic 3D HMD, with their position and gaze tracked by an IPS and the HMD's head tracker, freely switching between viewing RW visual stimuli provided by cameras mounted to the HMD and immersive VR visual stimuli from the equivalent vantage point into a virtual environment as tracked by the IPS. A controller held by the user is used to control these switches between RW and VR. The mobile client that produces the graphical content delivered to the HMD is carried about the person in a bag/satchel.
-
-\begin{figure}[h]
-	\begin{center}
-		\includegraphics[width=.5\linewidth]{system-architecture.png}
-		\caption{High level overview of the Mirrorshades parallel reality platform.}
-		\label{systemarchitecture}
-	\end{center}
-\end{figure}
+Figure \ref{participant-f-5.jpg} shows the Mirrorshades parallel reality platform in use, while figure \ref{systemarchitecture} presents a high level overview of its architecture. Mirrorshades allows its user to observe and move around their real environment (RW) whilst wearing a stereoscopic 3D HMD, with their position and gaze tracked by an IPS and the HMD's head tracker, freely switching between viewing RW visual stimuli provided by cameras mounted to the HMD and immersive VR visual stimuli from the equivalent vantage point into a virtual environment as tracked by the IPS. A controller held by the user is used to control these switches between RW and VR. The mobile client that produces the graphical content delivered to the HMD is carried about the person in a bag/satchel.
 
 \begin{figure}[h]
 	\begin{center}
 		\includegraphics[width=\linewidth]{participant-f-5.jpg}
 		\caption{The Mirrorshades parallel reality platform.}
 		\label{participant-f-5.jpg}
+	\end{center}
+\end{figure}
+
+\begin{figure}[h]
+	\begin{center}
+		\includegraphics[width=.5\linewidth]{system-architecture.png}
+		\caption{High level overview of the Mirrorshades parallel reality platform.}
+		\label{systemarchitecture}
 	\end{center}
 \end{figure}
 
